tests/compile-fail/buffer_outlives_operation.stderr
error[E0597]: `ring` does not live long enough
  --> tests/compile-fail/buffer_outlives_operation.rs:11:23
   |
6  |     let mut ring = Ring::new(10).unwrap();
   |         -------- binding `ring` declared here
...
11 |         let _future = ring.read(0, buffer.as_mut_slice());
   |                       ^^^^ borrowed value does not live long enough
12 |     } // buffer dropped while operation is pending
13 | }
   | -
   | |
   | `ring` dropped here while still borrowed
   | borrow might be used here, when `ring` is dropped and runs the `Drop` code for type `Ring`

error[E0597]: `buffer` does not live long enough
  --> tests/compile-fail/buffer_outlives_operation.rs:11:36
   |
9  |         let mut buffer = PinnedBuffer::with_capacity(1024);
   |             ---------- binding `buffer` declared here
10 |         // This should not compile - buffer lifetime is too short
11 |         let _future = ring.read(0, buffer.as_mut_slice());
   |                                    ^^^^^^ borrowed value does not live long enough
12 |     } // buffer dropped while operation is pending
   |     - `buffer` dropped here while still borrowed
13 | }
   | - borrow might be used here, when `ring` is dropped and runs the `Drop` code for type `Ring`
   |
   = note: values in a scope are dropped in the opposite order they are defined
